--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+
 <head>
 	<title>Hugo Michel | Sumishi</title>
 
@@ -101,8 +104,9 @@
 				I started programming in 2020 at Creajeux and never stopped since. During my study, I made several cool
 				projects, alone or with a team, last one being <a onclick="Show('geckoparty')"><strong>Gecko
 						Party</strong></a>.<br><br>
-						
-				Most of my projects are available on <a href="https://github.com/SumishiM" target="_blank"><strong>GitHub</strong></a> if you
+
+				Most of my projects are available on <a href="https://github.com/SumishiM"
+					target="_blank"><strong>GitHub</strong></a> if you
 				want to
 				check<br><br>
 
@@ -129,17 +133,17 @@
 				I like having some variety on what task I can do at a given moment, that's why I have multiples projects
 				running at once.
 			</p>
-				<div class="flex-array">
-					<div class="hover-box" title="Pyrite">
-						<a class="button popout pyrite" onclick="Show('pyrite')">Pyrite Engine</a>
-					</div>
-					<div class="hover-box" title="Beerylis">
-						<a class="button popout beerylis" onclick="Show('beerylis')">Beerylis</a>
-					</div>
-					<div class="hover-box" title="Ignite">
-						<a class="button popout ignite" onclick="Show('ignite')">Ignite EC Framework</a>
-					</div>
+			<div class="flex-array">
+				<div class="hover-box" title="Pyrite">
+					<a class="button popout pyrite" onclick="Show('pyrite')">Pyrite Engine</a>
 				</div>
+				<div class="hover-box" title="Beerylis">
+					<a class="button popout beerylis" onclick="Show('beerylis')">Beerylis</a>
+				</div>
+				<div class="hover-box" title="Ignite">
+					<a class="button popout ignite" onclick="Show('ignite')">Ignite EC Framework</a>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -395,24 +399,25 @@
 			<p>
 				Gecko Party is a local multiplayer party game made with Unity featuring 8 minigames and a large lobby to
 				explore !<br>
-	
-				On this project, I worked on the project architecture and core systems, 2 out of the 8 minigames and a major
+
+				On this project, I worked on the project architecture and core systems, 2 out of the 8 minigames and a
+				major
 				part of the GUI.<br>
 			</p>
-			
+
 			<iframe src="https://www.youtube.com/embed/X39tJUiFqlo" frameborder="0" allowfullscreen></iframe>
 			<br>
 			<strong>Some screenshots !</strong>
 			<div class="image-grid">
-				<img class="screenshot image-grid-item" src="images/GP3.png" alt="Screenshot 1" >
-				<img class="screenshot image-grid-item big" src="images/GP1.png" alt="Screenshot 3" >
-				<img class="screenshot image-grid-item" src="images/GP2.png" alt="Screenshot 2" >
+				<img class="screenshot image-grid-item" src="images/GP3.png" alt="Screenshot 1">
+				<img class="screenshot image-grid-item big" src="images/GP1.png" alt="Screenshot 3">
+				<img class="screenshot image-grid-item" src="images/GP2.png" alt="Screenshot 2">
 			</div>
-			<img class="screenshot" src="images/GP5.png" alt="Screenshot 7" >
+			<img class="screenshot" src="images/GP5.png" alt="Screenshot 7">
 			<div class="image-grid">
-				<img class="screenshot image-grid-item big" src="images/GP7.png" alt="Screenshot 4" >
-				<img class="screenshot image-grid-item" src="images/GP4.png" alt="Screenshot 5" >
-				<img class="screenshot image-grid-item" src="images/GP6.png" alt="Screenshot 6" >
+				<img class="screenshot image-grid-item big" src="images/GP7.png" alt="Screenshot 4">
+				<img class="screenshot image-grid-item" src="images/GP4.png" alt="Screenshot 5">
+				<img class="screenshot image-grid-item" src="images/GP6.png" alt="Screenshot 6">
 			</div>
 		</div>
 	</div>
@@ -446,9 +451,9 @@
 			<br>
 			<strong>Some screenshots !</strong>
 			<div class="image-grid">
-				<img class="screenshot image-grid-item" src="images/Stellaria3.png" alt="Screenshot 1" >
-				<img class="screenshot image-grid-item big" src="images/Stellaria1.png" alt="Screenshot 3" >
-				<img class="screenshot image-grid-item" src="images/Stellaria2.png" alt="Screenshot 2" >
+				<img class="screenshot image-grid-item" src="images/Stellaria3.png" alt="Screenshot 1">
+				<img class="screenshot image-grid-item big" src="images/Stellaria1.png" alt="Screenshot 3">
+				<img class="screenshot image-grid-item" src="images/Stellaria2.png" alt="Screenshot 2">
 			</div>
 		</div>
 	</div>
@@ -471,7 +476,7 @@
 				<span><img class="small-icon" src="images/duration.png" alt="Duration" width="20" height="20" />
 					<strong>1 months</strong></span>
 			</div>
-			
+
 			<p>
 				Hydre'O'Miel is a <strong>card game</strong> made in <strong>C++</strong> using the
 				<strong>SFML</strong> graphic library<br>
@@ -481,9 +486,9 @@
 
 			<strong>Some screenshots !</strong>
 			<div class="image-grid">
-				<img class="image-grid-item" src="images/HOM1.png" alt="Screenshot 1" >
-				<img class="image-grid-item" src="images/HOM2.png" alt="Screenshot 2" >
-				<img class="image-grid-item big" src="images/HOM3.png" alt="Screenshot 3" >
+				<img class="image-grid-item" src="images/HOM1.png" alt="Screenshot 1">
+				<img class="image-grid-item" src="images/HOM2.png" alt="Screenshot 2">
+				<img class="image-grid-item big" src="images/HOM3.png" alt="Screenshot 3">
 			</div>
 		</div>
 	</div>
@@ -507,16 +512,18 @@
 					<strong>3 months</strong></span>
 			</div>
 			<p>
-				Daisy's Quest is a <strong>RPG</strong> game made in <strong>Lua</strong> using <strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map, loading/unloading, imports from Tiled, animated tiles, and level design.
+				Daisy's Quest is a <strong>RPG</strong> game made in <strong>Lua</strong> using
+				<strong>LOVE2D</strong>.<br>
+				On this project, I worked on the map, loading/unloading, imports from Tiled, animated tiles, and level
+				design.
 				I also made some gameplay with the creation of the last boss and the AI of the goblin.<br><br>
 			</p>
 
 			<strong>Some screenshots !</strong>
 			<div class="image-grid">
-				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3" >
-				<img class="image-grid-item" src="images/DQ1.png" alt="Screenshot 1" >
-				<img class="image-grid-item" src="images/DQ2.png" alt="Screenshot 2" >
+				<img class="image-grid-item big" src="images/DQ3.png" alt="Screenshot 3">
+				<img class="image-grid-item" src="images/DQ1.png" alt="Screenshot 1">
+				<img class="image-grid-item" src="images/DQ2.png" alt="Screenshot 2">
 			</div>
 		</div>
 	</div>
@@ -531,7 +538,7 @@
 		</div>
 
 		<div class="window-content defendthekingdom">
-			
+
 			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
@@ -540,15 +547,17 @@
 					<strong>2 weeks</strong></span>
 			</div>
 			<p>
-				Defend the Kingdom is a <strong>Tower defense</strong> game made in <strong>Lua</strong> using <strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map system, with tower placement and upgrades, imports from Tiled and level design.
+				Defend the Kingdom is a <strong>Tower defense</strong> game made in <strong>Lua</strong> using
+				<strong>LOVE2D</strong>.<br>
+				On this project, I worked on the map system, with tower placement and upgrades, imports from Tiled and
+				level design.
 			</p>
-			
+
 			<strong>Some screenshots !</strong>
 			<div class="image-grid">
-				<img class="image-grid-item" src="images/DTK1.png" alt="Screenshot 1" >
-				<img class="image-grid-item" src="images/DTK2.png" alt="Screenshot 2" >
-				<img class="image-grid-item big" src="images/DTK3.png" alt="Screenshot 3" >
+				<img class="image-grid-item" src="images/DTK1.png" alt="Screenshot 1">
+				<img class="image-grid-item" src="images/DTK2.png" alt="Screenshot 2">
+				<img class="image-grid-item big" src="images/DTK3.png" alt="Screenshot 3">
 			</div>
 		</div>
 	</div>
@@ -563,7 +572,7 @@
 		</div>
 
 		<div class="window-content ishikoridome">
-			
+
 			Made during my 1st year at Creajeux
 			<div class="flex-array" style="gap:1.5em;">
 				<span><img class="small-icon" src="images/members.png" alt="Members" width="20" height="20" />
@@ -572,8 +581,10 @@
 					<strong>2 weeks</strong></span>
 			</div>
 			<p>
-				Le disciple d'Ishikori-Dome is a <strong>Roguelike</strong> game made in <strong>Lua</strong> using <strong>LOVE2D</strong>.<br>
-				On this project, I worked on the map system, with the collision system and the procedural generation. I also did some gameplay with the boss AI.
+				Le disciple d'Ishikori-Dome is a <strong>Roguelike</strong> game made in <strong>Lua</strong> using
+				<strong>LOVE2D</strong>.<br>
+				On this project, I worked on the map system, with the collision system and the procedural generation. I
+				also did some gameplay with the boss AI.
 			</p>
 		</div>
 	</div>
@@ -689,3 +700,5 @@
 		setInterval(updateDateTime, 1000);
 	</script>
 </main>
+
+</html>
