--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="Styles/fonts.css">
+	<link rel="stylesheet" href="styles/fonts.css">
 
-	<link rel="stylesheet" href="Styles/style.css">
-	<link rel="stylesheet" href="Styles/accordions.css">
-	<link rel="stylesheet" href="Styles/windows.css">
-	<link rel="stylesheet" href="Styles/buttons.css">
-	<link rel="stylesheet" href="Styles/image_grid.css">
+	<link rel="stylesheet" href="styles/style.css">
+	<link rel="stylesheet" href="styles/accordions.css">
+	<link rel="stylesheet" href="styles/windows.css">
+	<link rel="stylesheet" href="styles/buttons.css">
+	<link rel="stylesheet" href="styles/image_grid.css">
 </head>
 
 
