Create basic blogs pages

--- a/index.html
+++ b/index.html
@@ -41,9 +41,19 @@
 		</div>
 
 		<div class="accordion-item">
+			Blogs
+			<div class="hover-box accordion-content">
+				<a class="button popout title" href="blogs/ignite.html">Ignite ECS</a>
+			</div>
+			<div class="hover-box accordion-content">
+				<a class="button popout title" href="blogs/pyrite.html">Pyrite Engine</a>
+			</div>
+		</div>
+
+		<div class="accordion-item">
 			My projects
 			<div class="hover-box accordion-content">
-				<a class="button popout title" onclick="Show('ignite')">Ignite</a>
+				<a class="button popout title" onclick="Show('ignite')">Ignite ECS</a>
 			</div>
 			<div class="hover-box accordion-content">
 				<a class="button popout title" onclick="Show('pyrite')">Pyrite Engine</a>
