--- a/blogs/ignite.html
+++ b/blogs/ignite.html
@@ -23,31 +23,46 @@
         <a class="button popout back" href="../index.html">Back</a>
     </div>
 
-    <body class="centered">
+    <body class="centered blog">
 
-        <p>
-            <strong>Ignite ECS</strong>
-        </p>
+        <div class="blog-title">
+            Ignite ECS
+        </div>
         <p>
             Ignite is a basic Entity Component System if we can call it as such. At it's core, it uses
             Nodes which are entities, Components and Systems.
         </p>
         <p>
-            <strong>Nodes</strong>
+            <a id="nodes" class="chapter-title" href="ignite.html#nodes"><strong>Nodes</strong></a>
         </p>
         <p>
-            In Ignite, nodes are objects that exist in the world and serve as Components container.
-            A node alone doesn't do anything, but with components, then the node can interact with the world.
+            A node is an object represented by it's id. In Ignite, nodes also act as components containers, each node
+            containing it's components.
+        </p>
 
+        <p>
+            <a id="components" class="chapter-title" href="ignite.html#components"><strong>Components</strong></a>
         </p>
         <p>
-            <strong>Components</strong>
+            A component is a datatype that can be added to or removed from nodes.
+            Components in ECS are generally plain data types and not encapsulated and Ignite is no exception.
+        </p>
+
+        <p>
+            <a id="systems" class="chapter-title" href="ignite.html#systems"><strong>Systems</strong></a>
         </p>
         <p>
-            <strong>Systems</strong>
+            A system is an executable object that is matched with all nodes that have a certain set of components.
+            Nodes are registered in a system with a filter set to the system.
+            Then at runtime, every nodes with matching components will be registerd in the system.
+        </p>
+
+        <p>
+            <a id="worlds" class="chapter-title" href="ignite.html#worlds"><strong>Worlds</strong></a>
         </p>
         <p>
-            <strong>Worlds</strong>
+            A world is where all ECS data is stored. In Ignite we can have multiple worlds which can communicate with
+            each. This allow us to dissociate data and logic through multiple environnements.
         </p>
     </body>
 </main>
