update title fonts

--- a/blogs/ignite.html
+++ b/blogs/ignite.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Blog | Ignite ECS</title>
+    <title>Blog | Ignite ECS Framework</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
             Ignite ECS
         </div>
         <p>
-            Ignite is a basic Entity Component System if we can call it as such. At it's core, it uses
-            Nodes which are entities, Components and Systems.
+            Ignite is a basic C# Entity Component System (ECS) framework. At it's core, it uses Nodes which are entities,
+            Components and Systems.
         </p>
         <p>
             <a id="nodes" class="chapter-title" href="ignite.html#nodes"><strong>Nodes</strong></a>
