Add Context section

--- a/blogs/ignite.html
+++ b/blogs/ignite.html
@@ -60,6 +60,14 @@
             then execute some code we've made for each nodes registered.
         </p>
 
+        <div id="contexts" class="chapter-title">
+            <a href="ignite.html#contexts">Contexts</a>
+        </div>
+        <p>
+            A context is a tracker object that register valid nodes for a system. It allow us to process nodes more
+            efficiently when a system execute itself.
+        </p>
+
         <div id="worlds" class="chapter-title">
             <a href="ignite.html#worlds">Worlds</a>
         </div>
