--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
 					GitHub
 				</a>
 			</div>
+			<div>I also made a blog about it for more informations ! :D</div>
+			<div class="hover-box" title="Ignite Blog">
+				<a class="button popout blog" href="blogs/ignite.html">
+					<!--<img src="images/github.png" alt="Github" width="25" height="25" />-->
+					Blog
+				</a>
+			</div>
 		</div>
 	</div>
 
