--- a/blogs/ignite.html
+++ b/blogs/ignite.html
@@ -37,7 +37,7 @@
         </div>
         <p>
             A node is an object represented by it's id existing in a world. In Ignite, nodes also act as components
-            containers, each node containing it's components. We can also create a hierarchy for nodes to help us
+            containers, each one containing it's own. We can also create a hierarchy for nodes to help us
             organize our projects.<br>
             In Ignite, the nodes ids works in a bit of a strange way, they are coded on a 64 bytes unsigned integer
             which is split if 3 segments
