--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="accordion-item">
 			Blogs
 			<div class="hover-box accordion-content">
-				<a class="button popout title" href="blogs/ignite.html">Ignite ECS</a>
+				<a class="button popout title" href="https://sumishim.github.io/blogs/ignite/">Ignite ECS</a>
 			</div>
 			<!--
 			<div class="hover-box accordion-content">
@@ -334,7 +334,7 @@
 			</div>
 			<div>I also made a blog about it for more informations ! :D</div>
 			<div class="hover-box" title="Ignite Blog">
-				<a class="button popout blog" href="blogs/ignite.html">
+				<a class="button popout blog" href="https://sumishim.github.io/blogs/ignite/">
 					<!--<img src="images/github.png" alt="Github" width="25" height="25" />-->
 					Blog
 				</a>
