--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 			</div>
 			<div>I also made a blog about it for more informations ! :D</div>
 			<div class="hover-box" title="Ignite Blog">
-				<a class="button popout blog" href="https://sumishim.github.io/blogs/ignite/">
+				<a class="button popout blog" href="https://sumishim.github.io/blogs/ignite">
 					<!--<img src="images/github.png" alt="Github" width="25" height="25" />-->
 					Blog
 				</a>
