--- a/blogs/ignite.html
+++ b/blogs/ignite.html
@@ -20,7 +20,7 @@
 
 <main>
     <div class="hover-box" title="Home">
-        <a class="button popout back" href="https://sumishim.github.io/index">Back</a>
+        <a class="button popout back" href="https://sumishim.github.io">Back</a>
     </div>
 
     <body class="centered blog">
