update main page

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	</div>
 
 	<!-- Contact -->
-	<div class="window" id="contact" title="Contact" style="top: 190px; left: 1220px; max-width: 300px">
+	<div class="window active" id="contact" title="Contact" style="top: 190px; left: 1220px; max-width: 300px">
 		<div class="window-header" id="contactheader">
 			<div class="window-title">Contact me</div>
 			<div onclick="Hide('contact')">
