tooltip on socials

--- a/index.html
+++ b/index.html
@@ -164,23 +164,27 @@
 		</div>
 
 		<div class="window-content socials">
-			<div class="hover-box" title="GitHub">
+			<div class="hover-box tooltip" title="GitHub">
+				<span class="tooltiptext">GitHub</span>
 				<a class="button popout icon github" href="https://github.com/SumishiM" target="_blank">
 					<img src="images/github.png" alt="GitHub" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box" title="Itch.io">
+			<div class="hover-box tooltip" title="Itch.io">
+				<span class="tooltiptext">Itch.io</span>
 				<a class="button popout icon itchio" href="https://sumishi.itch.io/" target="_blank">
 					<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box" title="LinkedIn">
+			<div class="hover-box tooltip" title="LinkedIn">
+				<span class="tooltiptext">LinkedIn</span>
 				<a class="button popout icon linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
 					target="_blank">
 					<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
 				</a>
 			</div>
-			<div class="hover-box" title="Instagram">
+			<div class="hover-box tooltip" title="Instagram">
+				<span class="tooltiptext">Instagram</span>
 				<a class="button popout icon instagram" href="https://www.instagram.com/hgo_michl?igsh=amsydGlsMXlvdGlm"
 					target="_blank">
 					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
@@ -191,7 +195,8 @@
 					<img src="images/twitter.png" alt="Twitter" width="25" height="25" />
 				</a>
 			</div>-->
-			<div class="hover-box" title="Discord">
+			<div class="hover-box tooltip" title="Discord">
+					<span class="tooltiptext">Discord</span>
 				<a class="button popout icon discord" href="https://discord.com/users/286171790349303809"
 					target="_blank">
 					<img src="images/discord.png" alt="Discord" width="25" height="25" />
