--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="accordion-item">
 			Blogs
 			<div class="hover-box accordion-content">
-				<a class="button popout title" href="https://sumishim.github.io/blogs/ignite/">Ignite ECS</a>
+				<a class="button popout title" href="https://sumishim.github.io/blogs/ignite">Ignite ECS</a>
 			</div>
 			<!--
 			<div class="hover-box accordion-content">
@@ -165,26 +165,26 @@
 
 		<div class="window-content socials">
 			<div class="hover-box tooltip" title="GitHub">
-				<span class="tooltiptext">GitHub</span>
+				<div class="tooltiptext">GitHub<i></i></div>
 				<a class="button popout icon github" href="https://github.com/SumishiM" target="_blank">
 					<img src="images/github.png" alt="GitHub" width="25" height="25" />
 				</a>
 			</div>
 			<div class="hover-box tooltip" title="Itch.io">
-				<span class="tooltiptext">Itch.io</span>
+				<div class="tooltiptext">Itch.io<i></i></div>
 				<a class="button popout icon itchio" href="https://sumishi.itch.io/" target="_blank">
 					<img src="images/itch.io.png" alt="Itch.io" width="25" height="25" />
 				</a>
 			</div>
 			<div class="hover-box tooltip" title="LinkedIn">
-				<span class="tooltiptext">LinkedIn</span>
+				<div class="tooltiptext">LinkedIn<i></i></div>
 				<a class="button popout icon linkedin" href="https://www.linkedin.com/in/hugo-michel-sumishi/"
 					target="_blank">
 					<img src="images/linkedin.png" alt="LinkedIn" width="25" height="25" />
 				</a>
 			</div>
 			<div class="hover-box tooltip" title="Instagram">
-				<span class="tooltiptext">Instagram</span>
+				<div class="tooltiptext">Instagram<i></i></div>
 				<a class="button popout icon instagram" href="https://www.instagram.com/hgo_michl?igsh=amsydGlsMXlvdGlm"
 					target="_blank">
 					<img src="images/instagram.png" alt="Instagram" width="25" height="25" />
@@ -196,7 +196,7 @@
 				</a>
 			</div>-->
 			<div class="hover-box tooltip" title="Discord">
-					<span class="tooltiptext">Discord</span>
+				<div class="tooltiptext">Discord<i></i></div>
 				<a class="button popout icon discord" href="https://discord.com/users/286171790349303809"
 					target="_blank">
 					<img src="images/discord.png" alt="Discord" width="25" height="25" />
@@ -254,37 +254,37 @@
 			Since I started programming, I learned several programming languages such as :
 			<div class="flex-array">
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">C#</span>
+					<div class="tooltiptext">C#<i></i></div>
 					<a class="image-icon icon cs">
 						<img src="images/cs.png" alt="C#" width="35" height="35" />
 					</a>
 				</div>
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">C++</span>
+					<div class="tooltiptext">C++<i></i></div>
 					<a class="image-icon icon cpp">
 						<img src="images/cpp.png" alt="C++" width="35" height="35" />
 					</a>
 				</div>
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">Lua</span>
+					<div class="tooltiptext">Lua<i></i></div>
 					<a class="image-icon icon lua">
 						<img src="images/lua.png" alt="Lua" width="35" height="35" />
 					</a>
 				</div>
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">Rust</span>
+					<div class="tooltiptext">Rust<i></i></div>
 					<a class="image-icon icon rust">
 						<img src="images/rust.png" alt="Rust" width="35" height="35" />
 					</a>
 				</div>
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">HTML</span>
+					<div class="tooltiptext">HTML<i></i></div>
 					<a class="image-icon icon html">
 						<img src="images/html.png" alt="HTML" width="35" height="35" />
 					</a>
 				</div>
 				<div class="hover-box tooltip">
-					<span class="tooltiptext">CSS</span>
+					<div class="tooltiptext">CSS<i></i></div>
 					<a class="image-icon icon css">
 						<img src="images/css.png" alt="CSS" width="35" height="35" />
 					</a>
@@ -292,50 +292,54 @@
 			</div>
 			<div>
 				I also learned to work on those game engines :<br>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">Unreal Engine</span>
-					<a class="image-icon icon unreal">
-						<img src="images/unreal.png" alt="Unreal Engine" width="35" height="35" />
-					</a>
-				</div>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">Unity</span>
-					<a class="image-icon icon unity">
-						<img src="images/unity.png" alt="Unity" width="35" height="35" />
-					</a>
-				</div>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">Godot</span>
-					<a class="image-icon icon godot">
-						<img src="images/godot.png" alt="Godot" width="35" height="35" />
-					</a>
+				<div class="flex-array">
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">Unreal Engine<i></i></div>
+						<a class="image-icon icon unreal">
+							<img src="images/unreal.png" alt="Unreal Engine" width="35" height="35" />
+						</a>
+					</div>
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">Unity<i></i></div>
+						<a class="image-icon icon unity">
+							<img src="images/unity.png" alt="Unity" width="35" height="35" />
+						</a>
+					</div>
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">Godot<i></i></div>
+						<a class="image-icon icon godot">
+							<img src="images/godot.png" alt="Godot" width="35" height="35" />
+						</a>
+					</div>
 				</div>
 			</div>
 			<div>
 				And I learned how to use those frameworks :<br>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">.NET MAUI</span>
-					<a class="image-icon icon maui">
-						<img src="images/maui.png" alt=".NET MAUI" width="35" height="35" />
-					</a>
-				</div>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">ASP.NET Blazor</span>
-					<a class="image-icon icon blazor">
-						<img src="images/blazor.png" alt="ASP.NET Blazor" width="35" height="35" />
-					</a>
-				</div>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">MonoGame</span>
-					<a class="image-icon icon monogame">
-						<img src="images/monogame.png" alt="MonoGame" width="35" height="35" />
-					</a>
-				</div>
-				<div class="hover-box tooltip">
-					<span class="tooltiptext">FNA</span>
-					<a class="image-icon icon fna">
-						<img src="images/fna.png" alt="FNA" width="35" height="35" />
-					</a>
+				<div class="flex-array">
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">.NET MAUI<i></i></div>
+						<a class="image-icon icon maui">
+							<img src="images/maui.png" alt=".NET MAUI" width="35" height="35" />
+						</a>
+					</div>
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">ASP.NET Blazor<i></i></div>
+						<a class="image-icon icon blazor">
+							<img src="images/blazor.png" alt="ASP.NET Blazor" width="35" height="35" />
+						</a>
+					</div>
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">MonoGame<i></i></div>
+						<a class="image-icon icon monogame">
+							<img src="images/monogame.png" alt="MonoGame" width="35" height="35" />
+						</a>
+					</div>
+					<div class="hover-box tooltip">
+						<div class="tooltiptext">FNA<i></i></div>
+						<a class="image-icon icon fna">
+							<img src="images/fna.png" alt="FNA" width="35" height="35" />
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
